fixed wrapping bug

--- a/app/assets/stylesheets/styles/game_page.scss
+++ b/app/assets/stylesheets/styles/game_page.scss
@@ -1,3 +1,3 @@
 .whitespace {
-  white-space: pre;
+  white-space: pre-wrap;
 }
